# interatomic

./: .gitignore  Cargo.toml  README.md  SIMD_SPLINE.md
.cargo/: config.toml
benches/: twobody.rs
examples/: grid_compare.rs
interatomic/: Cargo.toml
interatomic/examples/: example1.rs
interatomic/src/: combination_rule.rs  lib.rs  qpochhammer.rs  spline.rs
interatomic/src/electrostatic/: ewald.rs  mod.rs  poisson.rs
interatomic/src/fourbody/: harmonic.rs  mod.rs  periodic.rs
interatomic/src/multipole/: coulomb.rs  ewald.rs  mod.rs  poisson.rs
interatomic/src/threebody/: cosine.rs  harmonic.rs  mod.rs
interatomic/src/twobody/: ashbaugh_hatch.rs  electrostatic.rs  fene.rs  hardsphere.rs  harmonic.rs  lennard_jones.rs  mie.rs  mod.rs  morse.rs  multipole.rs  ureybradley.rs
src/: combination_rule.rs  gpu.rs  lib.rs  spline.rs
src/fourbody/: harmonic.rs  mod.rs  periodic.rs  spline.rs
src/shaders/: spline.wgsl  spline_inversersq.wgsl  spline_powerlaw2.wgsl
src/threebody/: cosine.rs  harmonic.rs  mod.rs  spline.rs
src/twobody/: ashbaugh_hatch.rs  custom.rs  fene.rs  hardsphere.rs  harmonic.rs  hermite.rs  kimhummer.rs  lennard_jones.rs  mie.rs  mod.rs  morse.rs  multipole.rs  potential.rs  ureybradley.rs  wca.rs
