[package]
name = "interatomic"
version = "0.4.0"
edition = "2021"
description = "Library for calculating inter-particle interactions"
readme = "README.md"
authors = ["Mikael Lund"]
license = "Apache-2.0"
categories = ["science"]
keywords = ["pairwise_interaction", "chemistry", "chemical_bond", "pair_potential"]
documentation = "https://docs.rs/interatomic"
repository = "https://github.com/mlund/interatomic"

[lib]

[features]
serde = ["dep:serde"]
custom = ["dep:exmex"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
anyhow = "1.0"
exmex = { version = "0.20", features = ["partial"], optional = true }
itertools = "0.10"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
num = "0.4"
physical_constants = "0.5"
coulomb = { version = "0.3", features = ["serde"] }
dyn-clone = "1.0.17"
wide = "1.1"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "twobody"
harness = false

# See https://github.com/victe/rust-latex-doc-minimal-example
# for including math in the documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
