[package]
name = "interatomic"
version = "0.6.0"
edition = "2021"
description = "Library for calculating inter-particle interactions"
readme = "README.md"
authors = ["Mikael Lund"]
license = "Apache-2.0"
categories = ["science"]
keywords = ["pairwise_interaction", "chemistry", "chemical_bond", "pair_potential"]
documentation = "https://docs.rs/interatomic"
repository = "https://github.com/mlund/interatomic"

[lib]

[features]
default = ["simd"]
serde = ["dep:serde"]
custom = ["dep:exmex"]
gpu = ["dep:bytemuck"]
simd = ["dep:wide"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
exmex = { version = "0.20", features = ["partial"], optional = true }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
num = "0.4"
coulomb = { version = "0.4.0", features = ["serde"] }
dyn-clone = "1.0"
bytemuck = { version = "1", features = ["derive"], optional = true }
wide = { version = "1.1", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
serde_json = "1.0"

[[bench]]
name = "twobody"
harness = false

# See https://github.com/victe/rust-latex-doc-minimal-example
# for including math in the documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
